<resources>
    <string name="app_name">CoffeeInn</string>
    <string name="app_version">V1.0.0</string>
    <string name="start_button">Mulai</string>
    <string name="tab1">Partnerships</string>
    <string name="tab2">Home</string>
    <string name="tab3">About</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_previously_started" />
    <string name="about_us">About Us</string>
    <string name="coffeein_slogan">\"A mobile apps to educate Indonesia about Coffee and its richness in Indonesia\"</string>
    <string name="version">Version 1.0.0</string>
    <string name="developer_team"> <b>Developer Team</b>\nRyan Ahasan Al-Helal\nJauharul Arifin\nMerico Edward Ricardo </string>
    <string name="lead_developer"><b>Lead Developer</b>\nRyan Ahasan Al-Helal</string>
    <string name="lead_design"><b>Lead UI/UX Designer</b>\nJauharul Arifin</string>
    <string name="lead_content"><b>Lead Content Organizer</b>\nMerico Edward Ricardo</string>
    <string name="thanks">Terima kasih kepada partner kami yang sudah mendukung proses pembuatan aplikasi ini dan mensupport ide serta bahan-bahan berupa foto dan video. \n\nRegards, \nCoffeeinn Team</string>
    <string name="coffeeBean_robusta_title">Robusta</string>
    <string name="coffeeBean_arabica_title">Arabica</string>
    <string name="coffeebeans_arabica_text">Arabica merupakan salah satu jenis kopi yang paling populer bersama dengan robusta. Kopi arabica dihasilkan dari tanaman Caffea arabica yang berasal dari Etiopia kemudian dibawa ke Arab oleh pedagang Yaman. Kemudian minuman kopi dari biji kopi arabica mulai populer setelah orang-orang Arab membuat minuman penyegar dari ekstrak biji kopi arabica yang diseduh dengan air hangat.</string>
    <string name="coffee_beans">Coffee Beans</string>
    <string name="coffeebeans_robusta_text">Nama biji kopi ini diambil dari kata “robust” yang berarti kuat. Sesuai dengan Namanya, minuman kopi yang dihasilkan dari ekstrasi biji kopi ini memiliki cita rasa yang lebih kuat dan terasa pahit. Biasanya kopi robusta digunakan sebagai bahan pembuatan kopi siap saji (instant) dan pencampur kopi racikan (blend) supaya menambah cita rasa kopi selain itu, minuman kopi seperti cappuccino, café latte dan macchiato juga menggunakan bahan dari biji kopi robusta.</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="popularcoffee_espresso_text">Espresso atau es–press–oh merupakan salah satu minuman kopi yang berasal dari ekstrasi mesin espresso yang bertekanan tinggi. Atau bisa dibilang espresso adalah hasil dari sari pati biji kopi yang berupa minuman kopi yang padat dan kental. Espresso dapat dihasilkan dari biji kopi apapun asalkan proses pembuatannya menggunakan mesin espresso. Proses pembuatannya menggunakan air yang dipanaskan sekitar 190–197 derajat Fahrenheit dan ditekan melalui portalfilter.</string>
    <string name="popularcoffee_groundcoffee_text">Ground coffee sebenarnya adalah bubuk kopi yang dihasilkan dari biji kopi yang telah digiling. Bubuk kopi yang dihasilkan dari proses penggiligan juga memiliki beberapa tingkatan, diantaranya adalah giling kasar (coarse), giling sedang (medium), halus (fine) dan sangat halus (very fine). Biasanya tingatan penggilingan tersebut dingunakan untuk menentukan proses penyeduhan atau brewing method yang digunakan untuk menyeduh bubuk kopi tersebut. Misalnya jika kita ingin membuat kopi dengan French Press, maka bubuk kopi yang kita butuhkan harus bertekstur kasar.</string>
    <string name="popularcoffee_coldbrew_text">Cold brew terbuat dari bubuk kopi yang diseduh dengan air dingin atau air suhu ruangan lalu didiamkan sekitar 12–24 jam untuk mendapatkan rasa yang optimal. Tidak seperti kopi lain pada umumnya, cold brew sama sekali tidak memerlukan suhu panas pada bubuk kopi. Oleh karena itu, cold brew brekarakteristik cenderung ringan dan segar dibanding kopi pada umumnya. Cold brew bisa tetap segar jika disimpan di dalam kulkas hingga 2 minggu.</string>
    <string name="popularcoffee_longblack_text">Long black merupakan jenis minuman kopi hitam yang berasal dari daerah Australia dan Selandia Baru. Long black terdiri dari espresso dan air panas yang dicampurkan. Cara penyajiannya yaitu dengan menyiapkan air panas terlebih dahulu lalu setelah itu dituangkan espresso ke dalamnya. Perbandingan rasio penyanjian kopi ini tergantung dari selera penikmat kopi tersebut. Umumnya air panas yang dituangkan adalah sekitar 100–120 ml. Long black identik dengan residu krema yang berada bagian atas kopi. Krema yang berada diatas kopi tersebut tetap utuh karena cara penajian kopi ini yang menuangkan air panas terlebih dahulu. Long black hampir sama dengan Americano tetapi aroma dan cita rasa yang dimiliki lebih kuat dan memiliki krema yang lebih terlihat jelas daripada Americano.</string>
    <string name="popularcoffee_cappucino_text"><![CDATA[Cappuccino berasal dari Italia dan merupakan minuman khas dari negara tersebut. Pada dasarnya cappuccino terbuat dari campuran espresso dan susu, tapi minuman ini terdiri dari campuran espresso, steamed milk, dan milk froth yang masing-masing memiliki takaran yang sama yaitu &#8531;. Minuman cappuccino dapat dikenali dengan merasakan foam yang tegas dan tebal saat tegukan pertama kali, diikuti dengan kopi dengan rasa yang kuat dan milky. Biasanya cappuccino disajikan di atas cangkir kopi keramik yang memiliki daya simpan panas yang lebih baik daripada gelas. Perlu diketahui bahwa cappuccino sesungguhnya tidak menggunakan latte art diatasnya.]]></string>
    <string name="popularcoffee_caffelatte_text">Latte atau Caffe latte adalah minuman kopi atau espresso yang dicampur dengan susu dan memiliki lapisan foam yang tipis diatasnya. Umumnya perbandingan susu dengan espresso pada caffe latte adalah 2:1. Komposisi dari caffe latte sendiri terdiri dari double shoot espresso, steamed milk, dan micro foam yang dihasilkan dari proses susu yang di-steam. Proses steaming susu pada caffe latte bertujuan untuk memanaskan susu hingga mencapai temperatur yang diinginkan. Cita rasa khas dari caffe latte ialah kopi yang terasa begitu milky sejak pertama kali diteguk. Caffe latte sangat terkenal dengan desain-desain latte art diatasnya yang dihadirkan oleh barista.</string>
    <string name="popularcoffee_moccacino_text"><![CDATA[Moccacino tidak jauh berbeda dengan cappuccino dan latte. Yang membedakannya adalah adanya campuran cokelat di dalamnya. Komposisi dari moccacino terdiri dari espresso, cokelat, susu, dan whip cream yang masing-masing memiliki &#188; takaran. Cokelat yang dicampurkan dapat bervariasi, mulai dari cokelat cair hingga cokelat bubuk. Cokelat putih juga dapat digunakan sebagai tambahan cokelat pada minuman ini. Ciri khas dari rasa kopi ini ialah sensasi rasa cokelat yang kuat sehingga cocok bagi penikmat kopi yang gemar cokelat.]]></string>
    <string name="popularcoffee_affogato_text">Berbeda dengan jenis minuman kopi yang lain, affogato merupakan sajian es krim yang disiram dengan espresso diatas cangkir atau mangkuk kecil. Jenis sajian kopi ini berasal dari Italia sehingga pada mulanaya es krim yang digunakan adalah es krim khas dari negara tersebut, yaitu gelato. Tapi, es krim yang digunakan tidak harus gelato. Es krim biasa juga dapat digunakan untuk membuat coffee affogato ini. Umumnya, es krim yang digunakan adalah es krim dengan rasa vanila dengan takaran satu scoop saja. Namun, takaran es krim yang disajikan dapat beragam tidak harus satu scoop tergantung selera masing-masing. </string>
    <string name="popularcoffee_vietnamedrip_text">Sesuiai dengan namanya, Vietnam drip coffee berasal dari negara Vietnam sebagai salah satu negara penghasil kopi terbesar. Minuman kopi ini disajikan dengan dripper khas Vietnam atau biasa disebut Vietnam drip filter. Setelah di filter, kopi dicampur dengan krimer/susu kental manis yang memberi rasa manis pada minuman kopi tersebut. Dripper berbentuk seperti gelas metal yang terdiri dari tabung, plunger, dan tutup metal. Cara penyajian kopi ini dengan Vietnam drip sangat mudah, setelah bubuk kopi dimasukan, masukan plunger lalu tekan, taruh plunger diatas gelas, lalu tuang dengan air panas. Selain panas, kopi ini juga dapat dihidangkan secara dingin. Metode pembuatan dengan Vietnam drip ini digunakan karena pada umumnya kopi yang digunakan adalah kopi robusta yang lebih pahit dari kopi arabika. Tapi, kopi arabika juga bisa digunakan untuk membuat kopi ini tergantung dengan selera masing–masing. Jika menggunakan kopi yang berjenis arabika, disarankankan untuk menggunakan kopi dengan karakter yang bold dan di–roasting pada tingkat medium hingga dark. Karena campuran krimmer yang dicampurkan cukup banyak (2–4 sdm).</string>
    <string name="popularcoffee_picollo_text"><![CDATA[Piccolo adalah kopi dengan komposisi espresso dan susu hampir sama dengan latte. Namun perbedaannya adalah jumlah campuran kopi yang banyak dari latte dan juga mengandung susu yang lebih sedikit. Biasanya piccolo disajikan di cangkir kecil dan memiliki rasa yang enak. Kadungan 15–20 ristretto shot menjadi kunci dari rasa kopi ini. Rissesto shot adalah bagian terbaik berdasarkan proses ekstraksi espresso lantaran teksturnya lembut & kadar asamnya pun sedikit dampak lamanya proses ekstraksi. Untuk membuat secangkir piccolo, dibutuhkan steamed milk sebanyak 100 ml dan tentu saja rissesto shot. Kopi ini memiliki aroma pekat kopi hitam dan rasa pahit yang pekat di lidah dan tenggorokan walaupun sudah tercampur dengan susu.]]></string>
    <string name="identic_schedule">Senin
        \nSelasa
        \nRabu
        \nKamis
        \nJumat
        \nSabtu
        \nMinggu</string>
    <string name="geura_scheduletime">10 AM - 10 PM
        \n10 AM - 10 PM
        \n10 AM - 10 PM
        \n10 AM - 10 PM
        \n1 PM - 10 PM
        \n10 AM - 10 PM
        \n1 PM - 10 PM</string>
    <string name="identic_espressobased_list">
        Espresso
        \nLong Black
        \nPicollo
        \nCapuccino
        \nCaffe Latte
        \nMoccacino
        \nAffogatto
        \nDolce Latte
        \nCaramel Latte
        \nHazelnut Latte
        \nVanilla Latte
        \nBlack Refresher
        \nEs Kopi Kuy
    </string>
    <string name="identic_espressobased_price">
        15.000
        \n25.000
        \n22.000
        \n25.000
        \n25.000
        \n30.000
        \n25.000
        \n25.000
        \n30.000
        \n30.000
        \n30.000
        \n25.000
        \n25.000
    </string>
    <string name="identic_blended_list">
        Chocolate
        \nStrawberry
        \nVanilla
        \nOreo
        \nOreo Coffee
    </string>
    <string name="identic_blended_price">
        30.000
        \n30.000
        \n30.000
        \n33.000
        \n35.000
    </string>
    <string name="identic_specialtea_list">
        Apple Cider
        \nHoney Berry
        \nBonie Nut Lemon
        \nEnglish Breakfast
        \nGen Maicha
        \nSlim and Slender
    </string>
    <string name="identic_specialtea_price">
        22.000
        \n22.000
        \n22.000
        \n22.000
        \n22.000
        \n22.000
    </string>
</resources>